--- a/drupal/sites/all/themes/tp4/sass/page/_campaigns.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_campaigns.scss
@@ -1427,6 +1427,7 @@ p.campaign-content-meta{
     @include breakpoint($breakpoint-desktop){
     width: 47%;
     height: 150px;
+    min-height: 150px;
     margin-right: 3%;
     }
     float: left;
